# agentik

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.claude/: settings.json
.claude/plans/: 2026-01-27_implementation-plan.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
crates/agentik-agent/: Cargo.toml
crates/agentik-agent/src/: agent.rs  executor.rs  lib.rs  modes.rs  planning.rs  questions.rs
crates/agentik-cli/: Cargo.toml
crates/agentik-cli/src/: main.rs  output.rs
crates/agentik-cli/src/commands/: config.rs  doctor.rs  mcp.rs  mod.rs  print.rs  provider.rs  session.rs
crates/agentik-cli/src/tui/: commands.rs  handlers.rs  mod.rs
crates/agentik-core/: Cargo.toml
crates/agentik-core/src/: config.rs  error.rs  lib.rs  message.rs  session.rs  tool.rs
crates/agentik-mcp/: Cargo.toml
crates/agentik-mcp/src/: client.rs  discovery.rs  error.rs  lib.rs  protocol.rs  tools.rs  transport.rs
crates/agentik-mcp/tests/: integration_test.rs
crates/agentik-metrics/: Cargo.toml
crates/agentik-metrics/src/: analytics.rs  benchmarks.rs  cutoff.rs  lib.rs  usage.rs
crates/agentik-providers/: Cargo.toml
crates/agentik-providers/src/: anthropic.rs  lib.rs  local.rs  openai.rs  registry.rs  sse.rs  traits.rs
crates/agentik-repomap/: Cargo.toml
crates/agentik-repomap/src/: cache.rs  graph.rs  lib.rs  parser.rs  ranking.rs  serializer.rs  types.rs
crates/agentik-session/: Cargo.toml
crates/agentik-session/migrations/: 001_initial.sql
crates/agentik-session/src/: compaction.rs  context.rs  lib.rs  recovery.rs  store.rs
crates/agentik-tools/: Cargo.toml
crates/agentik-tools/src/: external.rs  file_ops.rs  git.rs  lib.rs  registry.rs  repo_map.rs  shell.rs  web.rs
mcp-servers/: package.json
mcp-servers/src/: index.ts
mcp-servers/src/filesystem/: index.ts
mcp-servers/src/git/: index.ts
mcp-servers/src/web/: index.ts
scripts/: check.sh
