[workspace]
resolver = "2"
members = [
    "crates/agentik-core",
    "crates/agentik-providers",
    "crates/agentik-session",
    "crates/agentik-agent",
    "crates/agentik-tools",
    "crates/agentik-mcp",
    "crates/agentik-repomap",
    "crates/agentik-metrics",
    "crates/agentik-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Agentik Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentik/agentik"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI and TUI
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.28"
crossterm = "0.28"
indicatif = "0.17"
rustyline = "14"

# Syntax highlighting
syntect = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Tree-sitter for code parsing
tree-sitter = "0.24"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
parking_lot = "0.12"
glob = "0.3"

# Git (vendored-openssl for cross-platform compatibility)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Internal crates
agentik-core = { path = "crates/agentik-core" }
agentik-providers = { path = "crates/agentik-providers" }
agentik-session = { path = "crates/agentik-session" }
agentik-agent = { path = "crates/agentik-agent" }
agentik-tools = { path = "crates/agentik-tools" }
agentik-mcp = { path = "crates/agentik-mcp" }
agentik-repomap = { path = "crates/agentik-repomap" }
agentik-metrics = { path = "crates/agentik-metrics" }

[profile.release]
lto = true
codegen-units = 1
strip = true
