[package]
name = "agentik-agent"
description = "Agent orchestration and planning for Agentik"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agentik-core = { workspace = true }
agentik-providers = { workspace = true }
agentik-repomap = { path = "../agentik-repomap" }
agentik-session = { workspace = true }
agentik-tools = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
