[package]
name = "agentik-mcp"
description = "MCP client integration for Agentik"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agentik-core = { workspace = true }
agentik-tools = { workspace = true }

# Async
tokio = { workspace = true, features = ["process", "io-util"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client (for HTTP transport)
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Unix signal handling (Unix only)
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
