[package]
name = "agentik-session"
description = "Session persistence and context management for Agentik"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agentik-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = "5"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
